--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     color: black;
     box-shadow: 5px 5px 5px rgb(173, 92, 219);
     float: none;
+    font-size: 15px;
 }
 .copy_right_footer{
     position: fixed;
@@ -26,4 +27,7 @@ canvas{
     border-radius: 10;
     box-shadow: 5px 5px 5px rgb(173, 92, 219);
     margin-top: 150px;
+}
+.result_para_tag{
+    float: none ;
 }
